--- a/angular/src/app/main/checklist/task-details/task-details.component.html
+++ b/angular/src/app/main/checklist/task-details/task-details.component.html
@@ -317,9 +317,9 @@
                                                     </a>
                                                 </div>
                                                 <div class="row d-flex">
-                                                    <div class="col-md-5"> <span innerHTML="{{i.result.PreviousValue}}" ></span> </div>
-                                                    <div class="col-md-2 align-self-center"> <i class="fas fa-arrow-right arrowimage"></i> </div>
-                                                    <div class="col-md-5"> <span innerHTML="{{i.result.NewValue}}" ></span> </div>
+                                                    <div class="col-md-5 shadow-sm"> <span innerHTML="{{i.result.PreviousValue}}" ></span> </div>
+                                                    <div class="col-md-2 align-self-center"style="padding-left:50px;"> <i class="fas fa-arrow-right arrowimage"></i> </div>
+                                                    <div class="col-md-5 shadow-sm"> <span innerHTML="{{i.result.NewValue}}" ></span> </div>
                                                    
                                                    
                                                 </div>
