Cart of account Modal UI updated

--- a/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
+++ b/angular/src/app/main/account/accounts/create-edit-accounts/create-edit-accounts.component.html
@@ -231,21 +231,21 @@
                                                         [totalRecords]="primengTableHelper.totalRecordsCount"
                                                         [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage">
                                                     </p-paginator>
-
-                                                </div>
+                                                    
                                                 <span class="total-records-count">
                                                     {{l('TotalRecordsCount', primengTableHelper.totalRecordsCount)}}
                                                 </span>
+                                                </div>
                                             </div>
                                         </div>
                                         <!--end: Search Form -->
                                     </div>
                                   
                                     <div class="modal-footer kt-hidden">
-                                        <button type="button" class="btn btn-clean btn-bold btn-upper btn-font-md"
+                                        <button type="button" class="btn btn-clean btn-width btn-bold btn-upper btn-font-md"
                                             data-dismiss="modal">Close</button>
                                         <button type="button"
-                                            class="btn btn-default btn-bold btn-upper btn-font-md">Submit</button>
+                                            class="btn btn-default btn-bold btn-upper btn-width btn-font-md">Submit</button>
                                     </div>
                                 </div>
                             </div>
