--- a/angular/src/app/admin/subscription-management/subscription-management.component.html
+++ b/angular/src/app/admin/subscription-management/subscription-management.component.html
@@ -1,4 +1,4 @@
-<div [@routerTransition]>
+<!-- <div [@routerTransition]>
     <div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor">
         <div class="kt-subheader kt-grid__item">
             <div [class]="containerClass">
@@ -202,4 +202,243 @@
             </div>
         </div>
     </div>
+</div> -->
+
+
+
+<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+    <div class="row">
+        <div class="col-lg-7">
+            <div class="kt-portlet">
+                <div class="kt-portlet__head">
+                    <div class="kt-portlet__head-label">
+                       <h3 class="kt-portlet__head-title">
+                            <span>Subscription</span> 
+                       </h3>
+                    </div>
+                    <div class="kt-portlet__head-toolbar">
+                        <button class="btn btn-brand">{{"Cancel Subscription" | localize}}</button>
+                            
+                    </div>
+                </div>
+                <div class="kt-portlet__body">
+                    
+                    <div class="row pl-4">
+                        <div class="col-md-10">
+                            <h5>Monthly Subscription</h5>
+                            <span class="mt-3">Subscription start date {{tenant.creationTimeString }}</span>
+                            
+                            <div class="item-card-box custom-shadow mt-3 py-3 px-3">
+                                <div class="item-card rounded row">
+                                    <div class=col-md-9>
+                                        <img src="../../../assets/img/placeholder.svg" height="20px" width="20px" alt="bill">
+                                        <span><b>{{tenant.edition.displayName}}</b> 
+                                            </span>
+                                            
+                                    </div>
+                                    <div class="col-md-3 d-flex justify-content-end">
+                                        $  {{lastPayment.amount | number : '1.2-2'}} mo
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-10 mt-4">
+                            <h5>Last Payment</h5>
+                            <span class="mt-3">{{lastPayment.creationTime | momentFormat:'L'}} mo</span>
+                            
+                            <div class="item-card-box custom-shadow mt-3 py-3 px-3">
+                                <div class="item-card rounded row">
+                                    <div class=col-md-9>
+                                        <img src="../../../assets/img/placeholder.svg" height="20px" width="20px" alt="bill">
+                                        <span>Monthly Payment</span>
+                                    </div>
+                                    <div class="col-md-3 d-flex justify-content-end">
+                                        $ {{lastPayment.amount | number : '1.2-2'}}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-10 mt-4">
+                            <h5>Next Payment</h5>
+                            <span class="mt-3">{{tenant.subscriptionDateString}}</span>
+                            
+                            <div class="item-card-box custom-shadow mt-3 py-3 px-3">
+                                <div class="item-card rounded row">
+                                    <div class=col-md-9>
+                                        <img src="../../../assets/img/placeholder.svg" height="20px" width="20px" alt="bill">
+                                        <span>Monthly Payment</span>
+                                    </div>
+                                    <div class="col-md-3 d-flex justify-content-end">
+                                        $  {{lastPayment.amount | number : '1.2-2'}} mo
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-5">
+            <div class="kt-portlet" id="kt_portlet"
+            *ngFor="let editionWithFeatures of editionsSelectOutput.editionsWithFeatures;  let i = index"
+             >
+                
+                <div *ngIf="tenant.edition.id!=editionWithFeatures.edition.id" class="kt-portlet__body row">
+                    <div class="d-flex my-1">
+                        <div class="mr-auto"><h4>{{editionWithFeatures.edition.displayName}}</h4></div>
+                        <div class="pr-3" *ngIf="!editionWithFeatures.edition.isCustom"><h1>$ {{editionWithFeatures.edition.monthlyPrice}}<span style="font-size:12px;">mo</span></h1></div>
+                    </div>
+                    <div class="d-flex">
+                        <div class="mr-auto">
+                            <p class="my-0">
+                                <span style='font-size:13px;color :green'>&#10004;</span> 25 Users
+                            </p>
+                            <p class="my-0">
+                                <span style='font-size:13px;color :green'>&#10004;</span> Subscription
+                            </p>
+                            <p class="my-0">
+                                <span style='font-size:13px;color :green'>&#10004;</span> CheckList
+                            </p>
+                            <p class="my-0">
+                                <span style='font-size:13px;color :green'>&#10004;</span> Chart Of Account
+                            </p>
+                        </div>
+                       
+                        <div class="align-self-end">
+                          
+                            <button class="btn btn-brand"  (click)="upgrade(editionWithFeatures.edition, editionPaymentType.Upgrade)">Switch Plan</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          
+        </div>
+    </div> 
 </div>
+ <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="kt-portlet">
+                <div class="kt-portlet__head">
+                    <div class="kt-portlet__head-label">
+                        <h3 class="kt-portlet__head-title">
+                            <span> Payment History</span>
+                        </h3>
+                    </div>
+                </div>
+                
+                <div class="kt-portlet__body">
+                    
+                    <div class="primeng-datatable-container" [busyIf]="primengTableHelper.isLoading">
+                        <p-table #dataTable (onLazyLoad)="getPaymentHistory($event)"
+                            [value]="primengTableHelper.records"
+                            rows="{{primengTableHelper.defaultRecordsCountPerPage}}" [paginator]="false"
+                            [lazy]="true" [scrollable]="true" ScrollWidth="100%"
+                            [responsive]="primengTableHelper.isResponsive">
+                            <ng-template pTemplate="header">
+                                <tr>
+                                    <th style="width: 130px">{{'Invoice' | localize}}</th>
+                                    <th style="width: 150px" pSortableColumn="creationTime">
+                                        {{'ProcessTime' | localize}}
+                                        <p-sortIcon field="creationTime"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="editionDisplayName">
+                                        {{'Edition' | localize}}
+                                        <p-sortIcon field="editionDisplayName"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="gateway">
+                                        {{'Gateway' | localize}}
+                                        <p-sortIcon field="gateway"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 100px" pSortableColumn="amount">
+                                        {{'Amount' | localize}}
+                                        <p-sortIcon field="amount"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="status">
+                                        {{'Status' | localize}}
+                                        <p-sortIcon field="status"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 150px" pSortableColumn="paymentPeriodType">
+                                        {{'Period' | localize}}
+                                        <p-sortIcon field="paymentPeriodType"></p-sortIcon>
+                                    </th>
+                                    <th style="width: 100px">{{'DayCount' | localize}}</th>
+                                    <th style="width: 250px;">{{'PaymentId' | localize}}</th>
+                                    <th style="width: 150px" pSortableColumn="invoiceNo">
+                                        {{'InvoiceNo' | localize}}
+                                        <p-sortIcon field="invoiceNo"></p-sortIcon>
+                                    </th>
+                                </tr>
+                            </ng-template>
+                            <ng-template pTemplate="body" let-record="$implicit">
+                                <tr>
+                                    <td style="width: 130px">
+                                        <button type="button" class="btn btn-sm btn-primary"
+                                            (click)="createOrShowInvoice(record.id, record.invoiceNo)">{{'ShowInvoice' | localize}}</button>
+                                    </td>
+                                    <td style="width: 150px">
+                                        <span class="ui-column-title">{{'ProcessTime' | localize}}</span>
+                                        <span
+                                            *ngIf="record.creationTime">{{record.creationTime | momentFormat:'L'}}</span>
+                                        <span *ngIf="!record.creationTime">-</span>
+                                    </td>
+                                    <td style="width: 150px">
+                                        <span class="ui-column-title">{{'Edition' | localize}}</span>
+                                        {{record.editionDisplayName}}
+                                    </td>
+                                    <td style="width: 150px">
+                                        <span class="ui-column-title">{{'Gateway' | localize}}</span>
+                                        {{'SubscriptionPaymentGatewayType_' + record.gateway | localize}}
+                                    </td>
+                                    <td style="width: 100px">
+                                        <span class="ui-column-title">{{'Amount' | localize}}</span>
+                                        {{appSession.application.currencySign}}
+                                        {{record.amount | number : '1.2-2'}}
+                                    </td>
+                                    <td style="width: 150px">
+                                        <span class="ui-column-title">{{'Status' | localize}}</span>
+                                        {{'SubscriptionPaymentStatus_' + record.status | localize}}
+                                    </td>
+                                    <td style="width: 150px">
+                                        <span class="ui-column-title">{{'Period' | localize}}</span>
+                                        {{'PaymentPeriodType_' + record.paymentPeriodType | localize}}
+                                    </td>
+                                    <td style="width: 100px">
+                                        <span class="ui-column-title">{{'DayCount' | localize}}</span>
+                                        {{record.dayCount}}
+                                    </td>
+                                    <td style="width: 250px;">
+                                        <span class="ui-column-title">{{'PaymentId' | localize}}</span>
+                                        {{record.paymentId}}
+                                    </td>
+                                    <td style="width: 150px">
+                                        <span class="ui-column-title">{{'InvoiceNo' | localize}}</span>
+                                        {{record.invoiceNo}}
+                                    </td>
+                                </tr>
+                            </ng-template>
+                        </p-table>
+                        <div class="primeng-no-data" *ngIf="primengTableHelper.totalRecordsCount == 0">
+                            {{'NoData' | localize}}
+                        </div>
+                        <div class="primeng-paging-container">
+                            <p-paginator [rows]="primengTableHelper.defaultRecordsCountPerPage" #paginator
+                                (onPageChange)="getPaymentHistory($event)"
+                                [totalRecords]="primengTableHelper.totalRecordsCount"
+                                [rowsPerPageOptions]="primengTableHelper.predefinedRecordsCountPerPage">
+                            </p-paginator>
+                            <span class="total-records-count">
+                                {{'TotalRecordsCount' | localize:primengTableHelper.totalRecordsCount}}
+                            </span>
+                        </div>
+                    </div>
+ 
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
