--- a/angular/src/app/admin/subscription-management/subscription-management.component.html
+++ b/angular/src/app/admin/subscription-management/subscription-management.component.html
@@ -217,7 +217,7 @@
                        </h3>
                     </div>
                     <div class="kt-portlet__head-toolbar">
-                        <button class="btn btn-brand">{{"Cancel Subscription" | localize}}</button>
+                        <button class="btn btn-brand" (click)="CancelSubscription()">{{"Cancel Subscription" | localize}}</button>
                             
                     </div>
                 </div>
