--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -182,7 +182,7 @@
                                             <span class=""> {{item.trialBalance  | formater}}</span>
                                         </td>
                                        
-                                        <td  [ngClass]="{'disabled':!monthStatus }"  class="assignee-cell">
+                                        <td [ngClass]="{'disabled':!monthStatus,disabled :!changeAssigneePermission}"  class="assignee-cell">
                                             <div *ngIf="item.id != rowid" class="kt-user-card-v2"
                                                 (click)="openFieldUpdateAssignee(item.id)">
                                                 <div class="kt-user-card-v2__pic">
@@ -205,7 +205,7 @@
                                                 <app-user-list-component  (callBack)="refreshGrid()"  taskId = {{item.id}} comingChangeReguest="accounts" userId = {{item.assigneeId}} ></app-user-list-component>
                                             </div>
                                         </td>
-                                        <td [ngClass]="{'disabled':!monthStatus}" class="action-cell">
+                                        <td [ngClass]="{'disabled':!monthStatus ,disabled :!changeStatusPermission}" class="action-cell">
                                             <form class="task-report-form">
                                                 <select [disabled]="item.lock" onclick="console.log('test')"
                                                     (change)="ChangeStatus($event.target.value,item.id,item.accountReconciliationCheck)"
@@ -246,7 +246,7 @@
                                                         <span *ngIf="item.balance" class="">{{item.trialBalance  | formater}}</span>
                                                     </div>
                                                 </li>
-                                                <li [ngClass]="{'disabled':!monthStatus}" class="assignee-cell collapsable-cell kt-user-card-v2">
+                                                <li [ngClass]="{'disabled':!monthStatus,disabled :!changeAssigneePermission}" class="assignee-cell collapsable-cell kt-user-card-v2">
                                                     <div class="thead-box"><b>{{"Assignee" | localize}} : </b></div>
                                                     <div  *ngIf="item.id != rowid" (click)="openFieldUpdateAssignee(item.id)" class="tdata-box">
                                                         <div class="kt-user-card-v2__pic">
@@ -266,8 +266,8 @@
                                                         <app-user-list-component  (callBack)="refreshGrid()"  taskId = {{item.id}} comingChangeReguest="accounts" userId = {{item.assigneeId}} ></app-user-list-component>
                                                     </div>
                                                 </li>
-                                                <li [ngClass]="{'disabled':!monthStatus}" class="action-cell-item collapsable-cell">
-                                                    <div class="thead-box"><b>{{"Action" | localize}} : </b></div>
+                                                <li [ngClass]="{'disabled':!monthStatus ,disabled :!changeStatusPermission}" class="action-cell-item collapsable-cell">
+                                                    <div class="thead-box"><b>{{"Status" | localize}} : </b></div>
                                                     <form class="task-report-form">
                                                         <form class="task-report-form">
                                                             <select  onclick="console.log('test')"
