Calender UI issue

--- a/angular/src/account/register/select-edition.component.less
+++ b/angular/src/account/register/select-edition.component.less
@@ -23,7 +23,9 @@ button[disabled] {
     text-align: center;
     padding: 2.14rem 0 2.14rem 0;
 }
-
+::ng-deep table.days.weeks th:first-child, ::ng-deep table.days.weeks td:first-child {
+    display: none;
+}
 .kt-pricing-1 .kt-pricing-1__items .kt-pricing-1__item {
     border-right: 0.07rem solid #ebedf2;
     padding: 0;
