--- a/angular/src/app/admin/tenants/customized-plan-request.component.html
+++ b/angular/src/app/admin/tenants/customized-plan-request.component.html
@@ -41,7 +41,7 @@
                         <div class="col-xl-6">
                             <div  class="form-group">
                                 <label >Select Expiry Date</label>
-                                <input  bsDatepicker formControlName="expiryDate" class="form-control" name="expiryDateOfUser" placeholder="Select Date" bsDatepicker autocomplete="off" required>
+                                <input  bsDatepicker  class="form-control" name="expiryDateOfUser" placeholder="Select Date" bsDatepicker autocomplete="off" required>
                                                     
                             </div>
                         </div>
