--- a/angular/src/app/main/checklist/createtask/createtask.component.css
+++ b/angular/src/app/main/checklist/createtask/createtask.component.css
@@ -63,6 +63,10 @@ label{
     left:50%;
     transform: translateX(-50%);
 }
+
+::ng-deep table.days.weeks th:first-child, ::ng-deep table.days.weeks td:first-child {
+    display: none;
+}
 .btn-brand{
  margin-top: 5px;
 }
