--- a/angular/src/app/main/checklist/edit-task/edit-task.component.css
+++ b/angular/src/app/main/checklist/edit-task/edit-task.component.css
@@ -137,6 +137,9 @@ label{
     transform: translateX(-50%);
 }
 
+::ng-deep table.days.weeks th:first-child, ::ng-deep table.days.weeks td:first-child {
+    display: none;
+}
 
 .compress{
     width: 22px !important;
