--- a/angular/src/app/admin/importlog/importlog.component.html
+++ b/angular/src/app/admin/importlog/importlog.component.html
@@ -33,38 +33,39 @@
                                 [resizableColumns]="primengTableHelper.resizableColumns">
                                 <ng-template pTemplate="header">
                                     <tr> 
-                                        <th style="width: 150px" pSortableColumn="creationTime">
+                                        <th style="width: 140px" pSortableColumn="creationTime">
                                             {{l('Date')}}
                                             <p-sortIcon field="record.creationTime"></p-sortIcon>
                                         </th>
-                                        <th style="width: 150px"  pSortableColumn="type"> 
+                                        <th style="width: 130px"  pSortableColumn="type"> 
                                             {{l('Type')}} 
                                             <p-sortIcon field="record.type"></p-sortIcon>
                                         </th>
 
-                                        <th style="width: 220px"> {{l('User')}} </th>
+                                        <th style="width: 200px"> {{l('User')}} </th>
 
                                         <th style="width: 80px">{{l('Record')}}</th>
 
                                         <th style="width: 80px"> {{l('ErrorForImport')}} </th>
 
-                                        <th style="width: 120px"> {{l('Action')}} </th>
+                                        <th style="width: 70px"> {{l('Action')}} </th>
+                                        <th style="width: 80px"> {{l('Status')}} </th>
                                     </tr>
                                     
                                 </ng-template>
                                 <ng-template pTemplate="body" let-record="$implicit">
                                     <tr>
-                                        <td style="width: 150px">
+                                        <td style="width: 140px">
                                             <span class="ui-column-title"> {{l('Date')}}</span>
                                             {{record.creationTime | momentFormat:'L hh:mm a'}}
                                         </td>
-                                        <td style="width: 150px">
+                                        <td style="width: 130px">
                                             <span class="ui-column-title"> {{l('Type')}}</span>
                                            
                                             <a *ngIf="record.successFilePath" style="color: #848fe4;cursor: pointer !important;" (click)="downloadFile(record.successFilePath)"> {{record.type}}</a>
                                             <a *ngIf="!record.successFilePath">{{record.type}}</a>
                                         </td>
-                                        <td style="width: 220px">
+                                        <td style="width: 200px">
                                             <span class="ui-column-title"> {{l('User')}}</span>
                                             {{record.createdBy}}
                                         </td>                                                                  
@@ -81,11 +82,17 @@
                                             <a *ngIf="record.filePath" style="color: #848fe4;cursor: pointer !important;" (click)="downloadFile(record.filePath)">Download</a>
                                             <a *ngIf="!record.filePath">N/A</a>
                                         </td>
-                                            <td style="width: 120px">
+                                            <td style="width: 70px">
                                                 <a  *ngIf="!record.isRollBacked && record.type == 'TrialBalance'" class="btn"
                                                 href="javascript:;" (click)="rollBack(record.id)">
                                                 <i class="fas fa-undo"></i>
                                                 </a>
+                                            </td>
+                                            <td style="width: 80px">
+                                                <span class="ui-column-title"> {{l('Status')}}</span>
+                                                <a *ngIf="record.fileStatus == 1"> In Process</a>
+                                                <a *ngIf="record.fileStatus == 2"> Completed</a>
+
                                             </td>
                                     </tr>
                                 </ng-template>
