Fixed Alignment issue on check list

--- a/angular/src/app/main/checklist/createtask/createtask.component.html
+++ b/angular/src/app/main/checklist/createtask/createtask.component.html
@@ -191,7 +191,7 @@
 
                                     
 
-                                    <div class="col-md-10 form-group">
+                                    <div class="form-group">
                                         <label class="bg-color">{{"Instruction" | localize}}</label>
                                         <div class="form-group">
                                             <p-editor [(ngModel)]="checklist.instruction" name="HtmlEditorInput"
