--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -166,7 +166,7 @@
                                             <span class="">{{item.accountNumber}}</span>
                                             
                                         </td>
-                                        <td class="accountName-cell" (click)="reDirectToItemizedAmotized(item.reconciliationTypeId,item.id,item.accountNumber,item.accountName,item.accountBalanceId)">
+                                        <td class="accountName-cell" (click)="reDirectToItemizedAmotized(item.linkedAccountName,item.linkedAccountId,item.linkedAccountNumber,item.reconciliationTypeId,item.id,item.accountNumber,item.accountName,item.accountBalanceId)">
                                             <span class="task-box">{{item.accountName}}</span>
                                         </td>
                                         <td class="accountType-cell">
