--- a/angular/src/app/admin/settings/tenant-settings.component.html
+++ b/angular/src/app/admin/settings/tenant-settings.component.html
@@ -479,7 +479,7 @@
                             <div class="form-group col-xl-3" style="height: 40px !important;">
                                 <div class="month-calender">
                                    <form class="input-arrow">
-                                       <input [(ngModel)]="selectedDefaultDate"  required="required"
+                                       <input [(ngModel)]="selectedDate"  required="required"
                                            autocomplete="off" class="form-control" name="date" bsDatepicker 
                                            placeholder="Select Default Month" class="form-control" name="date"
                                            bsDatepicker
