--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -50,7 +50,7 @@
                                 <div class="col-md-3 kt-margin-b-20-tablet-and-mobile">
                                     <div class="date-picker">
                                         <input id="monthValue" 
-                                            value="january 2020" (ngModelChange)="filterByMonth($event)" class="date-field"  name="monthValue"
+                                            value="january 2020" (ngModelChange)="filterByMonth($event)" class="date-field form-control m-input"  name="monthValue"
                                             [(ngModel)]="monthValue" [bsConfig]="{dateInputFormat: 'MMMM YYYY'}"
                                             (onShown)="onOpenCalendar($event)" type="text" bsDatepicker />
                                     </div>
