--- a/angular/src/app/main/reconcilliation/reconcilliation.component.html
+++ b/angular/src/app/main/reconcilliation/reconcilliation.component.html
@@ -98,7 +98,7 @@
                                             <div class="form-group">
                                                 <input type="text" autoFocus (input)="getAllAccounts()"
                                                     [(ngModel)]="filterText" name="filterText"
-                                                    [placeholder]="l('SearchWithThreeDot')" class="border-grey">
+                                                    [placeholder]="l('SearchWithThreeDot')" class="form-control m-input">
                                             </div>
                                         </form>
                                     </div>
