--- a/angular/src/app/main/reports/task-report/task-report.component.html
+++ b/angular/src/app/main/reports/task-report/task-report.component.html
@@ -123,7 +123,7 @@
                                         <div class="form-group">
                                             <input type="text" autoFocus (input)="getClosingCheckListAllTasks()"
                                                 [(ngModel)]="filterText" name="filterText"
-                                                [placeholder]="l('SearchWithThreeDot')" class="border-grey">
+                                                [placeholder]="l('SearchWithThreeDot')" class="form-control m-input">
                                         </div>
                                     </form>
                                 </div>
