Button's text UI fixed

--- a/angular/src/app/main/account/accounts/accounts.component.html
+++ b/angular/src/app/main/account/accounts/accounts.component.html
@@ -29,11 +29,11 @@
                         <div class="record-card-header-bottom">
 
                             <div class="record-card-header-bottom-inner1">
-                                <button *ngIf="'Pages.ChartsofAccounts.Download' | permission" class="btn btn-images btn-width" data-toggle="modal" data-target="#kt_modal_1">
+                                <button *ngIf="'Pages.ChartsofAccounts.Download' | permission" class="btn btn-images btn-width pt-2" data-toggle="modal" data-target="#kt_modal_1">
                                     <img src="../../../../assets/img/download.png">
                                     {{"Download" | localize}}
                                 </button>
-                                <button *ngIf="'Pages.ChartsofAccounts.Upload' | permission" class="btn btn-images btn-width" data-toggle="modal" data-target="#kt_modal_2">
+                                <button *ngIf="'Pages.ChartsofAccounts.Upload' | permission" class="btn btn-images btn-width pt-2" data-toggle="modal" data-target="#kt_modal_2">
                                     <img src="../../../../assets/img/upload.png">
                                     {{"Upload" | localize}}
                                 </button>
