--- a/angular/src/app/main/reports/trialbalance-reports/trialbalance-reports.component.html
+++ b/angular/src/app/main/reports/trialbalance-reports/trialbalance-reports.component.html
@@ -16,7 +16,7 @@
                     
                     <div *ngIf="!compareTable" class="kt-subheader__wrapper">
                         <button data-toggle="modal" data-target="#kt_modal_6"
-                            class="btn btn-brand btn-width">Compare</button>
+                            class="btn btn-brand btn-width pl-4">{{"Compare" | localize}}</button>
                     </div>
                 </div>
             </div>
